[tool.poetry]
name = "tap-apaleo"
version = "0.0.1"
description = "`tap-apaleo` is a Singer tap for Apaleo."
authors = ["Felix Koch"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-apaleo = 'tap_apaleo.tap:TapApaleo.cli'
